--- a/static/gameScreen1.css
+++ b/static/gameScreen1.css
@@ -63,7 +63,7 @@ html, body {
   width: 100%;
   padding: 5vh 5vw;
   display: flex;
-  justify-content:  flex-start; /* Siirtää koko alueen vasemmalle */
+  justify-content: flex-start; /* Siirtää koko alueen vasemmalle */
   gap: 20px;
   flex-wrap: nowrap;
   flex-grow: 1; /* Varmistaa, että kasvaa jäljelle jäävään tilaan */
@@ -91,6 +91,7 @@ html, body {
   align-items: center;
   justify-content: center;
   gap: 10px;
+  position: relative; /* Tarvitaan overlayn sijoittamiseen */
 } 
 
 /* Kysymyslaatikko*/
@@ -145,6 +146,108 @@ button:hover {
   width: 100%;
   text-align: center;
   flex-grow: 1;
+}
+
+/* Viestit */
+#messages {
+  margin-top: 20px;
+  text-align: left;
+}
+
+#messages p {
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 10px;
+  border-radius: 8px;
+  margin: 5px 0;
+}
+
+/* Pistelaskuri */
+#score {
+  margin-top: 20px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+/* Peli ohi -viesti */
+#game-over-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(239, 125, 125, 1); /* Punainen väri, ei läpinäkyvä */
+  color: white;
+  display: none; /* Piilotetaan oletuksena */
+  align-items: center;
+  justify-content: center;
+  font-size: 36px;
+  font-weight: bold;
+  border-radius: 28px;
+  z-index: 10;
+}
+
+.hidden {
+  display: none;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(239, 125, 125, 1); /* Punainen väri, ei läpinäkyvä */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    z-index: 10;
+}
+
+.difficulty-buttons-container {
+    display: flex;
+    gap: 10px;
+}
+
+.difficulty-button {
+    padding: 15px 30px; /* Suuremmat napit */
+    font-size: 20px;
+    color: white;
+    background-color: rgba(65, 152, 196, 1);
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.difficulty-button.selected {
+    background-color: rgba(44, 44, 44, 1); /* Valitun nappulan väri */
+}
+
+.start-button {
+    padding: 10px 20px; /* Pienempi nappi */
+    font-size: 18px;
+    color: white;
+    background-color: rgba(65, 152, 196, 1);
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.difficulty-button:hover, .start-button:hover {
+    background-color: rgba(44, 44, 44, 1);
+}
+
+.start-button:disabled {
+    background-color: rgba(169, 169, 169, 1);
+    cursor: not-allowed;
+}
+
+/* Ajastin */
+#timer {
+  margin-top: 20px;
+  font-size: 18px;
+  font-weight: bold;
 }
 
 /* Responsiivisuus */
