--- a/templates/frontPage.html
+++ b/templates/frontPage.html
@@ -11,11 +11,17 @@
   </head>
   <body>
     <!-- Headerin sisältö (eka osio sivusta) -->
-    <header class="header-section" >
+    <header class="header-section">
       <div class="header-top">
         <img class="site-title" src="{{ url_for('static', filename='Kuvat/logoWhite.png') }}" alt="Logo valkoinen">
-        <a href="{{ url_for('logout') }}" class="logout-button">Kirjaudu ulos</a>
-        <div class="avatar-placeholder"></div>
+        <div class="dropdown avatar-dropdown">
+          <div class="avatar-placeholder"></div>
+          <div class="dropdown-content">
+            <a href="#">Avatarin vaihto</a>
+            <a href="#">Pelitulokset</a>
+            <a href="{{ url_for('logout') }}">Kirjaudu ulos</a>
+          </div>
+        </div>
       </div>
       <div class="header-bottom">
         <div class="nav-buttons">
