--- a/templates/mathMenu3rdGrade.html
+++ b/templates/mathMenu3rdGrade.html
@@ -14,7 +14,14 @@
     <header class="header-section" >
       <div class="header-top">
         <img class="site-title" src="{{ url_for('static', filename='kuvat/logoWhite.png') }}" alt="Logo valkoinen">
-        <div class="avatar-placeholder"></div>
+        <div class="dropdown avatar-dropdown">
+          <div class="avatar-placeholder"></div>
+          <div class="dropdown-content">
+            <a href="#">Avatarin vaihto</a>
+            <a href="#">Pelitulokset</a>
+            <a href="{{ url_for('logout') }}">Kirjaudu ulos</a>
+          </div>
+        </div>
       </div>
       <div class="header-bottom">
         <div class="nav-buttons">
