--- a/templates/mathMenu6rdGrade.html
+++ b/templates/mathMenu6rdGrade.html
@@ -13,12 +13,14 @@
     <!-- Headerin sisältö (eka osio sivusta) -->
     <header class="header-section" >
       <div class="header-top">
-        
         <img class="site-title" src="{{ url_for('static', filename='kuvat/logoWhite.png') }}" alt="Logo valkoinen">
-        <div class="dropdown avatar-dropdown">
-          <div class="avatar-placeholder"></div>
+        <div class="avatar-dropdown">
+          <button class="icon-button" aria-label="Menu">
+            <img loading="lazy" src="https://cdn.builder.io/api/v1/image/assets/TEMP/4fe30ddc3b898acf88f46ad779a7295745ba4d35ef0a4a6ccabf35735c61a035?placeholderIfAbsent=true&apiKey=d4a6829ab0a243af995c418502f3ed93"
+                class="icon-image" alt="Avatar" />
+          </button>
           <div class="dropdown-content">
-            <a href="#">Avatarin vaihto</a>
+            <a href="#">Profiili</a>
             <a href="#">Pelitulokset</a>
             <a href="{{ url_for('logout') }}">Kirjaudu ulos</a>
           </div>
