vaikeustaso ohjeiden päivitys

--- a/templates/gameScreen1.html
+++ b/templates/gameScreen1.html
@@ -24,9 +24,9 @@
                 <div class="main-display" role="img" aria-label="Main content display">
                     <div id="difficulty-overlay" class="overlay">
                         <div class="difficulty-buttons-container">
-                            <button class="difficulty-button" onclick="selectDifficulty('Helppo', 'KISSA', 0, 10)">Helppo</button>
-                            <button class="difficulty-button" onclick="selectDifficulty('Keskivaikea', 'KOIRA', 120, 15)">Keskivaikea</button>
-                            <button class="difficulty-button" onclick="selectDifficulty('Vaikea', 'HEPPA', 60, 20)">Vaikea</button>
+                            <button class="difficulty-button" onclick="selectDifficulty('Helppo', 'Helppo taso: Saat 10 pistettä jokaisesta oikeasta vastauksesta.', 0, 10)">Helppo</button>
+                            <button class="difficulty-button" onclick="selectDifficulty('Keskivaikea', 'Keskivaikea taso: Saat 15 pistettä jokaisesta oikeasta vastauksesta. Aika: 2 minuuttia.', 120, 15)">Keskivaikea</button>
+                            <button class="difficulty-button" onclick="selectDifficulty('Vaikea', 'Vaikea taso: Saat 20 pistettä jokaisesta oikeasta vastauksesta. Aika: 1 minuutti.', 60, 20)">Vaikea</button>
                         </div>
                         <button class="start-button" onclick="startGame()" disabled>Aloita</button>
                     </div>
