lisätty group selection html ja luotu sille polku. Tein itelleni roska tiedoston mihin voin nopee viskaa kamaa, poistan kun en tarvii

--- a/templates/groupSelection.html
+++ b/templates/groupSelection.html
@@ -83,7 +83,6 @@
     <!-- Uusi UI (toka osio sivulla)-->
     <div class="container" style="flex-direction: row; height:75% ;">
         <div class="sidebar" style="width: 30%";>
-          <button class="coming-soon-btn" style="">Luo ryhmä</button>
           <div class="dropdown">
             <button class="dropbtn" style="width: 100%;">Ryhmät</button>
             <div class="dropdown-content" style="width: 100%;">
@@ -91,13 +90,8 @@
             </div>
           </div>
         </div>
-        
         <div class="content-box" style="width: 70%;">
-          <div class="container-fluid">
-           
-            
-          </div>
-           
+            Luodut ryhmät
         </div>
     </div>
   </body>
