--- a/templates/groupSelection.html
+++ b/templates/groupSelection.html
@@ -74,9 +74,7 @@
       </div>
       <div class="header-bottom">
         <div class="nav-buttons">
-          <a href="{{ url_for('teacher_menu') }}">
-            <button class="coming-soon-btn">Etusivu</button>
-          </a>
+            <button class="coming-soon-btn"onclick=window.location.href="{{ url_for('group_management') }}">Takaisin</button>
         </div>
       </div>
     </header>
