--- a/templates/firstscreen.html
+++ b/templates/firstscreen.html
@@ -6,20 +6,21 @@
     <title>Opettaja vai Oppilas</title>
     <style>
         /* Painikkeiden tyylit */
-        button {
+        .bbtFS {
             transition: all .5s ease;
             color: blue;
-            border: 3px solid black;
+            
             font-family: 'Montserrat', sans-serif;
             text-transform: uppercase;
             text-align: center;
-            line-height: 1;
+            line-height: 0;
             font-size: 19px;
             background-color: transparent;
-            padding: 20px;
+            padding: 40px;
             outline: none;
-            border-radius: 10px;
+            border-radius: 0px;
             position: center;
+        
         }
 
         /* Painikkeen hover-tila */
@@ -34,12 +35,15 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+
+        }
+        .row{
+            align-items: center;
+            margin-left: 22%;
         }
 
         /* Painikkeiden välinen marginaali */
-        button + button {
-            margin-left: 20px;
-        }
+       
     </style>
 </head>
 <body>
@@ -54,14 +58,16 @@
 
     <!-- Painikkeet opettajan ja oppilaan kirjautumiseen -->
     <div class="container">
+        <div class="row">
         <a href="{{ url_for('teacher_login') }}">
-            <img src="{{ url_for('static', filename='kuvat/opettajaLogo.png') }}" alt="" style="width:42px;height:42px;">
+            <img class="bbtFS" src="{{ url_for('static', filename='kuvat/opettajaLogo.png') }}" alt="" style="width: 30%;" >
             
         </a>
         <a href="{{ url_for('student_login') }}">
-            <img src="{{ url_for('static', filename='kuvat/oppilasLogo.png') }}" alt="" style="width:42px;height:42px;">
+            <img class="bbtFS" src="{{ url_for('static', filename='kuvat/oppilasLogo.png') }}" alt="" style="width: 27%;" >
            
         </a>
+    </div>
     </div>
 </body>
 </html>
